--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "scripts": {
     "build": "gulp build",
-    "start": "npm run build && gulp serve"
+    "start": "npm run build && gulp serve",
+    "deploy": "gulp deploy"
   },
-  "author": "Denis Bulyha",
+  "author": "Storozhenko Dmytro",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.4.5",
@@ -20,6 +21,7 @@
     "gulp-cheerio": "^0.6.3",
     "gulp-concat": "^2.6.1",
     "gulp-csso": "^3.0.1",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-imagemin": "^6.0.0",
     "gulp-load-plugins": "^1.6.0",
     "gulp-plumber": "^1.2.1",
